galzolina/wordpress-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: galzolina
  labels:
    app: wordpress
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: wordpress
