galzolina/virtualservice.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: galzolina
  namespace: galzolina
spec:
  hosts:
  - galzolina.lag0.com.br
  gateways:
  - istio-system/lag0-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: wordpress.galzolina.svc.cluster.local
        port:
          number: 80
